--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,29 @@
 <html>
     <head>
         <meta charset="utf-8">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Dumb Starbucks Coffee</title>
-        <link rel="stylesheet" href="./css/bootstrap-v-4-1-1.min.css">
+        <!-- Dependencies: -->
+        <link rel="stylesheet" type="text/css" href="./css/bootstrap-v-4-1-1.min.css">
         <script type="text/javascript" src="./js/jquery-v-3-3-1.min.js"></script>
         <script type="text/javascript" src="./js/popper-v-1.js"></script>
         <script type="text/javascript" src="./js/bootstrap-v-4-1-1.min.js"></script>
+        <!-- Overwrites: -->
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
     </head>
     <body>
-        
+        <header class="container">
+            <div class="row">
+                <div class="col-sm-2">
+                    <img class="header_logo" src="./img/logo.bmp" alt="Logo of Dumb Starbucks Coffee.">
+                </div>
+                <div class="col">
+                    <h1>
+                        Dumb <br>
+                        Starbucks Coffee
+                    </h1>
+                </div>
+            </div>
+        </header>
     </body>
 </html>
