--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,32 @@
         <link rel="stylesheet" type="text/css" href="./css/style.css">
     </head>
     <body>
-        <header class="container">
-            <div class="row">
-                <div class="col-sm-2">
-                    <img class="header_logo" src="./img/logo.bmp" alt="Logo of Dumb Starbucks Coffee.">
+        <header>
+            <div class="container">
+                <div class="row
+                            no-gutters">
+                    <div class="col-sm-3">
+                        <img class="d-block
+                                    mx-auto"
+                             src="./img/logo.bmp"
+                             alt="Logo of Dumb Starbucks Coffee.">
+                    </div>
+                    <div class="col">
+                        <h1 class="display-4 text-uppercase">
+                            <small>Dumb</small> <br>
+                            Starbucks Coffee
+                        </h1>
+                    </div>
                 </div>
-                <div class="col">
-                    <h1>
-                        Dumb <br>
-                        Starbucks Coffee
-                    </h1>
+            </div>
+            <div class="jumbotron
+                        jumbotron-fluid
+                        text-center
+                        text-white
+                        header__jumbotron_has_bg-img">
+                <div class="container">
+                    <h2>Når du har tid</h2>
+                    <p class="lead"> Hos <span class="text-uppercase">Dumb Starbucks</span> tilbyder vi den bedste kaffe når du har tid. Bestil nu og kom ind og drik den når du har tid.</p>
                 </div>
             </div>
         </header>
