Created footer layout and styling with Bootstrap.

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="col">
                         <h1 class="display-4 text-uppercase">
-                            <small>Dumb</small> <br>
+                            <span class="small">Dumb</span> <br>
                             Starbucks Coffee
                         </h1>
                     </div>
@@ -42,5 +42,15 @@
                 </div>
             </div>
         </header>
+        <footer class="border-top">
+            <div class="container
+                        mt-5
+                        text-center">
+                <p>
+                    &#169; 2017-2018 <span class="text-uppercase">Dumb Starbucks coffee</span> <br>
+                    <span class="text-info">Nathan for you</span>
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
