Created card layout and styling with Bootstrap.
Changed footer text color.
Began working on the list of orders.

--- a/src/index.html
+++ b/src/index.html
@@ -42,11 +42,82 @@
                 </div>
             </div>
         </header>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8">
+                    <main>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm-6 py-3">
+                                    <article class="card">
+                                        <img class="card-img-top" src="./img/product__americano.jpg" alt="">
+                                        <div class="card-body
+                                                    d-flex
+                                                    flex-row
+                                                    flex-wrap
+                                                    justify-content-between
+                                                    align-items-center
+                                                    align-content-start">
+                                            <h3 class="card-title">Americano</h3>
+                                            <p class="card-text">Stærk crema espresso med varmt vand.</p>
+                                            <button class="btn btn-outline-secondary" type="button">Bestil</button>
+                                            <p class="card-text">60kr</p>
+                                        </div>
+                                    </article>
+                                </div>
+                                <div class="col-sm-6 py-3">
+                                    <article class="card">
+                                        <img class="card-img-top" src="./img/product__caffe-latte.jpg" alt="">
+                                        <div class="card-body
+                                                    d-flex
+                                                    flex-row
+                                                    flex-wrap
+                                                    justify-content-between
+                                                    align-items-center
+                                                    align-content-start">
+                                            <h3 class="card-title">Caffe Látte</h3>
+                                            <p class="card-text">Espresso med skummet varm mælk.</p>
+                                            <button class="btn btn-outline-secondary" type="button">Bestil</button>
+                                            <p class="card-text">65kr</p>
+                                        </div>
+                                    </article>
+                                </div>
+                                <div class="col-sm-6 py-3">
+                                    <article class="card">
+                                        <img class="card-img-top" src="./img/product__cappuccino.jpg" alt="">
+                                        <div class="card-body
+                                                    d-flex
+                                                    flex-row
+                                                    flex-wrap
+                                                    justify-content-between
+                                                    align-items-center
+                                                    align-content-start">
+                                            <h3 class="card-title">Cappuccino</h3>
+                                            <p class="card-text">Espresso med dampet mælk og skum.</p>
+                                            <button class="btn btn-outline-secondary" type="button">Bestil</button>
+                                            <p class="card-text">75kr</p>
+                                        </div>
+                                    </article>
+                                </div>
+                            </div>
+                        </div>
+                    </main>
+                </div>
+                <div class="col-sm-4">
+                    <aside class="container">
+                            <h3 class="">Bestilling</h3>
+                            <ul class="list-group">
+                                <li class="list-group-item"></li>
+                            </ul>
+                    </aside>
+                </div>
+            </div>
+        </div>
         <footer class="border-top">
             <div class="container
                         mt-5
                         text-center">
-                <p>
+                <p class="text-muted">
                     &#169; 2017-2018 <span class="text-uppercase">Dumb Starbucks coffee</span> <br>
                     <span class="text-info">Nathan for you</span>
                 </p>
