--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
                             no-gutters">
                     <div class="col-sm-3">
                         <img class="d-block
+                                    my-sm-3
                                     mx-auto"
                              src="./img/logo.bmp"
                              alt="Logo of Dumb Starbucks Coffee.">
@@ -44,7 +45,7 @@
         </header>
         <div class="container">
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-sm-8 p-0">
                     <main>
                         <div class="container">
                             <div class="row">
@@ -103,14 +104,52 @@
                         </div>
                     </main>
                 </div>
-                <div class="col-sm-4">
-                    <aside class="container">
-                            <h3 class="">Bestilling</h3>
-                            <ul class="list-group">
-                                <li class="list-group-item"></li>
-                            </ul>
-                    </aside>
-                </div>
+                <aside class="col-sm-4 py-3">
+                    <h3 class="d-flex
+                               flex-row
+                               flex-nowrap
+                               justify-content-between
+                               align-items-center
+                               mb-3">
+                        <span class="text-muted">Bestilling</span>
+                        <span class="badge badge-pill badge-secondary">2</span>
+                    </h3>
+                    <ul class="list-group">
+                        <li class="list-group-item
+                                   d-flex
+                                   flex-row
+                                   flex-nowrap
+                                   justify-content-between
+                                   align-items-center">
+                            <span class="font-weight-bold">Americano</span>
+                            <span>60kr</span>
+                        </li>
+                        <li class="list-group-item
+                                   d-flex
+                                   flex-row
+                                   flex-nowrap
+                                   justify-content-between
+                                   align-items-center">
+                            <span class="font-weight-bold">Macchiato</span>
+                            <span>100kr</span>
+                        </li>
+                        <li class="list-group-item
+                                   d-flex
+                                   flex-row
+                                   flex-nowrap
+                                   justify-content-between
+                                   align-items-center">
+                            <span>Total (DKK)</span>
+                            <span class="font-weight-bold">160kr</span>
+                        </li>
+                    </ul>
+                    <button class="btn
+                                   btn-block
+                                   btn-info
+                                   my-3"
+                            type="button"
+                            >Gå til betaling</button>
+                </aside>
             </div>
         </div>
         <footer class="border-top">
