--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,25 @@
     </head>
     <body>
         <header>
-            <div class="container">
-                <div class="row
-                            no-gutters">
+            <div class="container
+                        d-flex
+                        flex-row
+                        flex-wrap
+                        justify-content-center
+                        align-items-start
+                        align-content-start
+                        py-3">
+                <img class="flex-grow-0" src="./img/logo.bmp" alt="Logo of Dumb Starbucks Coffee.">
+                 <h1 class="flex-grow-1
+                            display-4
+                            text-uppercase">
+                     <span class="small">Dumb</span> <br>
+                     Starbucks Coffee
+                 </h1>
+                 <!-- Former version made  with Bootstrap grid. Contained a lot of extra html elements. -->
+                <!-- <div class="row
+                            no-gutters
+                            align-items-center">
                     <div class="col-sm-3">
                         <img class="d-block
                                     my-sm-3
@@ -24,13 +40,11 @@
                              src="./img/logo.bmp"
                              alt="Logo of Dumb Starbucks Coffee.">
                     </div>
-                    <div class="col">
-                        <h1 class="display-4 text-uppercase">
+                        <h1 class="col display-4 text-uppercase">
                             <span class="small">Dumb</span> <br>
                             Starbucks Coffee
                         </h1>
-                    </div>
-                </div>
+                </div> -->
             </div>
             <div class="jumbotron
                         jumbotron-fluid
@@ -43,60 +57,90 @@
                 </div>
             </div>
         </header>
-        <div class="container">
+        <div class="container pb-sm-5">
             <div class="row">
                 <div class="col-sm-8 p-0">
                     <main>
                         <div class="container">
-                            <div class="row">
+                            <div class="row align-content-stretch">
                                 <div class="col-sm-6 py-3">
-                                    <article class="card">
+                                    <article class="card h-100">
                                         <img class="card-img-top" src="./img/product__americano.jpg" alt="">
-                                        <div class="card-body
-                                                    d-flex
-                                                    flex-row
-                                                    flex-wrap
-                                                    justify-content-between
-                                                    align-items-center
-                                                    align-content-start">
-                                            <h3 class="card-title">Americano</h3>
-                                            <p class="card-text">Stærk crema espresso med varmt vand.</p>
-                                            <button class="btn btn-outline-secondary" type="button">Bestil</button>
-                                            <p class="card-text">60kr</p>
+                                        <div class="card-body">
+                                            <div class="container">
+                                                <div class="row">
+                                                    <div class="col px-0">
+                                                        <h3 class="card-title">Americano</h3>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col px-0">
+                                                        <p class="card-text">Stærk crema espresso med varmt vand.</p>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col px-0">
+                                                        <button class="btn btn-outline-secondary my-3" type="button">Bestil</button>
+                                                    </div>
+                                                    <div class="col px-0 d-inline-flex flex-row flex-nowrap justify-content-end align-items-center">
+                                                        <p class="card-text flex-grow-0">60kr</p>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </article>
                                 </div>
                                 <div class="col-sm-6 py-3">
                                     <article class="card">
                                         <img class="card-img-top" src="./img/product__caffe-latte.jpg" alt="">
-                                        <div class="card-body
-                                                    d-flex
-                                                    flex-row
-                                                    flex-wrap
-                                                    justify-content-between
-                                                    align-items-center
-                                                    align-content-start">
-                                            <h3 class="card-title">Caffe Látte</h3>
-                                            <p class="card-text">Espresso med skummet varm mælk.</p>
-                                            <button class="btn btn-outline-secondary" type="button">Bestil</button>
-                                            <p class="card-text">65kr</p>
+                                        <div class="card-body">
+                                            <div class="container">
+                                                <div class="row">
+                                                    <div class="col px-0">
+                                                        <h3 class="card-title">Caffe Látte</h3>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col px-0">
+                                                        <p class="card-text">Espresso med skummet varm mælk.</p>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col px-0">
+                                                        <button class="btn btn-outline-secondary my-3" type="button">Bestil</button>
+                                                    </div>
+                                                    <div class="col px-0 d-inline-flex flex-row flex-nowrap justify-content-end align-items-center">
+                                                        <p class="card-text">65kr</p>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </article>
                                 </div>
                                 <div class="col-sm-6 py-3">
                                     <article class="card">
                                         <img class="card-img-top" src="./img/product__cappuccino.jpg" alt="">
-                                        <div class="card-body
-                                                    d-flex
-                                                    flex-row
-                                                    flex-wrap
-                                                    justify-content-between
-                                                    align-items-center
-                                                    align-content-start">
-                                            <h3 class="card-title">Cappuccino</h3>
-                                            <p class="card-text">Espresso med dampet mælk og skum.</p>
-                                            <button class="btn btn-outline-secondary" type="button">Bestil</button>
-                                            <p class="card-text">75kr</p>
+                                        <div class="card-body">
+                                            <div class="container">
+                                                <div class="row">
+                                                    <div class="col px-0">
+                                                        <h3 class="card-title">Cappuccino</h3>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col px-0">
+                                                        <p class="card-text">Espresso med dampet mælk og skum.</p>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col px-0">
+                                                        <button class="btn btn-outline-secondary my-3" type="button">Bestil</button>
+                                                    </div>
+                                                    <div class="col px-0 d-inline-flex flex-row flex-nowrap justify-content-end align-items-center">
+                                                        <p class="card-text">75kr</p>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </article>
                                 </div>
