Added es6 to project.
Updated gulpfile to implement babel.
Added a test js file, to check that gulp and babel worked as expected.

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
         <script type="text/javascript" src="./js/bootstrap-v-4-1-1.min.js"></script>
         <!-- Overwrites: -->
         <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <script type="text/javascript" src="./js/_test.js"></script>
     </head>
     <body>
         <header>
