--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
                 <div class="col-sm-8 p-0">
                     <main>
                         <div class="container">
-                            <div class="row align-content-stretch">
+                            <div class="row align-content-stretch" id="card-catalog">
                                 <div class="col-sm-6 py-3">
                                     <article class="card h-100">
                                         <img class="card-img-top" src="./img/product__americano.jpg" alt="">
