Removed product cards from index.html.
All product cards are genererated by JS.

--- a/src/index.html
+++ b/src/index.html
@@ -63,89 +63,7 @@
                 <div class="col-sm-8 p-0">
                     <main>
                         <div class="container">
-                            <div class="row align-content-stretch" id="card-catalog">
-                                <div class="col-sm-6 py-3">
-                                    <article class="card h-100">
-                                        <img class="card-img-top" src="./img/product__americano.jpg" alt="">
-                                        <div class="card-body">
-                                            <div class="container">
-                                                <div class="row">
-                                                    <div class="col px-0">
-                                                        <h3 class="card-title">Americano</h3>
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col px-0">
-                                                        <p class="card-text">Stærk crema espresso med varmt vand.</p>
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col px-0">
-                                                        <button class="btn btn-outline-secondary my-3" type="button">Bestil</button>
-                                                    </div>
-                                                    <div class="col px-0 d-inline-flex flex-row flex-nowrap justify-content-end align-items-center">
-                                                        <p class="card-text flex-grow-0">60kr</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </article>
-                                </div>
-                                <div class="col-sm-6 py-3">
-                                    <article class="card">
-                                        <img class="card-img-top" src="./img/product__caffe-latte.jpg" alt="">
-                                        <div class="card-body">
-                                            <div class="container">
-                                                <div class="row">
-                                                    <div class="col px-0">
-                                                        <h3 class="card-title">Caffe Látte</h3>
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col px-0">
-                                                        <p class="card-text">Espresso med skummet varm mælk.</p>
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col px-0">
-                                                        <button class="btn btn-outline-secondary my-3" type="button">Bestil</button>
-                                                    </div>
-                                                    <div class="col px-0 d-inline-flex flex-row flex-nowrap justify-content-end align-items-center">
-                                                        <p class="card-text">65kr</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </article>
-                                </div>
-                                <div class="col-sm-6 py-3">
-                                    <article class="card">
-                                        <img class="card-img-top" src="./img/product__cappuccino.jpg" alt="">
-                                        <div class="card-body">
-                                            <div class="container">
-                                                <div class="row">
-                                                    <div class="col px-0">
-                                                        <h3 class="card-title">Cappuccino</h3>
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col px-0">
-                                                        <p class="card-text">Espresso med dampet mælk og skum.</p>
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col px-0">
-                                                        <button class="btn btn-outline-secondary my-3" type="button">Bestil</button>
-                                                    </div>
-                                                    <div class="col px-0 d-inline-flex flex-row flex-nowrap justify-content-end align-items-center">
-                                                        <p class="card-text">75kr</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </article>
-                                </div>
-                            </div>
+                            <div class="row align-content-stretch" id="card-catalog"></div>
                         </div>
                     </main>
                 </div>
