Added JS functionality to order counter.
Changed minor punctuality in data.
Updated todo list.

--- a/src/index.html
+++ b/src/index.html
@@ -75,9 +75,9 @@
                                align-items-center
                                mb-3">
                         <span class="text-muted">Bestilling</span>
-                        <span class="badge badge-pill badge-secondary">2</span>
+                        <span class="badge badge-pill badge-secondary" id="orders__count">Ingen :0</span>
                     </h3>
-                    <ul class="list-group">
+                    <ul class="list-group" id="orders">
                         <li class="list-group-item
                                    d-flex
                                    flex-row
