--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
                                align-items-center
                                mb-3">
                         <span class="text-muted">Bestilling</span>
-                        <span class="badge badge-pill badge-secondary" id="orders__count">Ingen :0</span>
+                        <span class="badge badge-pill badge-secondary" id="orders__count">Ingen :(</span>
                     </h3>
                     <ul class="list-group" id="orders">
                         <li class="list-group-item
@@ -84,26 +84,8 @@
                                    flex-nowrap
                                    justify-content-between
                                    align-items-center">
-                            <span class="font-weight-bold">Americano</span>
-                            <span>60kr</span>
-                        </li>
-                        <li class="list-group-item
-                                   d-flex
-                                   flex-row
-                                   flex-nowrap
-                                   justify-content-between
-                                   align-items-center">
-                            <span class="font-weight-bold">Macchiato</span>
-                            <span>100kr</span>
-                        </li>
-                        <li class="list-group-item
-                                   d-flex
-                                   flex-row
-                                   flex-nowrap
-                                   justify-content-between
-                                   align-items-center">
                             <span>Total (DKK)</span>
-                            <span class="font-weight-bold">160kr</span>
+                            <span class="font-weight-bold">0kr</span>
                         </li>
                     </ul>
                     <button class="btn
