--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
                         <span class="text-muted">Bestilling</span>
                         <span class="badge badge-pill badge-secondary" id="orders__count">Ingen :(</span>
                     </h3>
-                    <ul class="list-group" id="orders">
+                    <ul class="list-group" id="order-catalog">
                         <li class="list-group-item
                                    d-flex
                                    flex-row
@@ -85,7 +85,7 @@
                                    justify-content-between
                                    align-items-center">
                             <span>Total (DKK)</span>
-                            <span class="font-weight-bold">0kr</span>
+                            <span class="font-weight-bold" id="orders__sum">0kr</span>
                         </li>
                     </ul>
                     <button class="btn
