Added a btn to clear all orders.
The btn clears all orders from localStorage and in the order catalog. Something interferes with the displaying of the sum total after localStorage has been cleared.

--- a/src/index.html
+++ b/src/index.html
@@ -92,8 +92,17 @@
                                    btn-block
                                    btn-info
                                    my-3"
+                            type="button">
+                            Gå til betaling
+                    </button>
+                    <button class="btn
+                                   btn-block
+                                   btn-outline-danger
+                                   my-3"
                             type="button"
-                            >Gå til betaling</button>
+                            onclick="deleteOrders()">
+                            Ryd bestillinger
+                    </button>
                 </aside>
             </div>
         </div>
